--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,9 @@ body{
 }
 
 h2{
-    font-family: fantasy;
-    font-weight: 900;
-    font-size: 50px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 800;
+    font-size: 40px;
     color: cornsilk;
 }
 span{
